# htmx-practice

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py  models.py
app/core/: config.py
app/db/: database.py
app/repositories/: contact_repo.py
app/routers/: contacts.py
app/services/: contact_service.py
app/templates/: base.html  index.html
app/templates/partials/: contact_edit.html  contact_read.html
